2015-08-14  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* First look at this after vacation. Just typo fixes in headers
	and comments.

2015-05-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* The project was started 2011, but no ChangeLog messages were
	written. The project is restarted today. Until things are
	relatively stable there will be no ChangeLog messages.
